<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TinyG Console</string>
    <string name="local_service_label">TinyG Connector</string>
    <string name="network">Network</string>
    <string name="usb">USB</string>
    <string name="unknown_host">Unknown Host</string>
    <string name="network_error">Network Error</string>
    <string name="connected">Connected</string>
    <string name="xpos">X+</string>
    <string name="xneg">X-</string>
    <string name="ypos">Y+</string>
    <string name="yneg">Y-</string>
    <string name="zpos">Z+</string>
    <string name="zneg">Z-</string>
    <string name="zero_label">Set 0</string>
    <string name="home">Go Home</string>
    <string name="reset_label">Reset!</string>
    <string name="homing_cycle_label">G28.2</string>
    <string name="spindle_label">Spindle</string>
    <string name="coolant_label">Coolant</string>
    <string name="gcode_label">Gcode: </string>
    <string name="go_label">Go</string>
    <string name="zeropos">0.000</string>
    <string name="zeroloc">(0.0, 0.0, 0.0, 0.0)</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="nop">nop</string>
    <string name="run">run</string>
    <string name="end">end</string>
    <string name="hold">hold</string>
    <string name="homing">homing</string>
    <string name="aloc">A: </string>
    <string name="position_entry_label">Position: </string>
    <string name="status">Status: </string>
    <string name="momo">Mode: </string>
    <string name="line">Line: </string>
    <string name="vel">Vel: </string>
    <string name="na">-</string>
    <string name="feed_slow_label">Slow</string>
    <string name="feed_fast_label">Fast</string>
    <string name="jogval">Jog: </string>
    <string name="step_001">.001</string>
    <string name="step_01">.01</string>
    <string name="step_1">.1</string>
    <string name="step_1_0">1</string>
    <string name="step_10">10</string>
    <string name="mm">mm</string>
    <string name="inch">inch</string>
    <string name="traverse">traverse</string>
    <string name="straight">straight</string>
    <string name="cw">cw</string>
    <string name="ccw">ccw</string>
    <string name="invalid">invalid</string>
    <string name="about">Android app copyright 2013 Bexkat Systems LLC.\nTinyG and TgFX copyright Synthetos, LLC.</string>
    <string name="no_usb_host">USB host connectivity only supported in Android 3.1 and above.</string>
    <string name="no_usb_accessory">USB accessory connectivity only supported in Android 2.3.4 and above.</string>
    <string name="no_service">TinyG USB Service must be installed for USB support to work.</string>
    <string name="no_filemanager_installed">No filemanager is installed.</string>
    <string name="fb">Firmware build: </string>
    <string name="fv">Firmware version: </string>
    <string name="si">Update interval: </string>
    <string name="fr">Feed rate max: </string>
    <string name="sa">Step angle: </string>
    <string name="sv">Homing search velocity: </string>
    <string name="lv">Homing latch velocity: </string>
    <string name="am">Axis mode: </string>
    <string name="vm">Velocity max: </string>
    <string name="tm">Travel max: </string>
    <string name="jm">Jerk max: </string>
    <string name="ra">Radius: </string>
    <string name="jh">Jerk homing: </string>
    <string name="jd">Junction deviation: </string>
    <string name="sn">Switch min: </string>
    <string name="sx">Switch max: </string>
    <string name="lb">Latch backoff: </string>
    <string name="zb">Zero backoff: </string>
    <string name="ma">Map to axis: </string>
    <string name="tr">Travel/rev: </string>
    <string name="mi">Microsteps: </string>
    <string name="po">Polarity: </string>
    <string name="pm">Power mgmt: </string>
    <string name="hv">Hardware version: </string>
    <string name="id">Hardware ID: </string>
    <string name="st">Switch type: </string>
    <string name="fileLabel">File</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop_label">Stop</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="preferences_summary">General preferences</string>
    <string name="preferences_title">General</string>
    <string name="preferences_net_summary">Network preferences</string>
    <string name="preferences_net_title">Network</string>
    <string name="debug_title">Debug Log</string>

    <string-array name="axisArray">
        <item>Axis X</item>
        <item>Axis Y</item>
        <item>Axis Z</item>
        <item>Axis A</item>
        <item>Axis B</item>
        <item>Axis C</item>
    </string-array>
    <string-array name="motorArray">
        <item>Motor 1</item>
        <item>Motor 2</item>
        <item>Motor 3</item>
        <item>Motor 4</item>
    </string-array>
    <string-array name="driverArrayLabels">
        <item>Network</item>
        <item>USB (Host)</item>
        <item>USB (Accessory)</item>
    </string-array>
    <string-array name="driverArrayValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="tabArray">
        <item>Jog</item>
        <item>File</item>
        <item>System</item>
        <item>Motor</item>
        <item>Axis</item>
    </string-array>
    <string-array name="stArray">
        <item>Normally Open</item>
        <item>Normally Closed</item>
    </string-array>
    <string-array name="hvArray">
        <item>v6</item>
        <item>v7</item>
        <item>v8</item>
    </string-array>

</resources>