<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2" >

        <Button
            android:id="@+id/filepick"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:onClick="myClickHandler"
            android:text="@string/fileLabel" />

        <EditText
            android:id="@+id/filename"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/filepick"
            android:inputType="text" />

        <ToggleButton
            android:id="@+id/start"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_below="@+id/filepick"
            android:onClick="myClickHandler"
            android:textOff="@string/start"
            android:textOn="@string/stop_label" />

        <ToggleButton
            android:id="@+id/pause"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_toRightOf="@+id/start"
            android:layout_alignTop="@+id/start"
            android:onClick="myClickHandler"
            android:textOff="@string/pause"
            android:textOn="@string/resume" />
        
    </RelativeLayout>

    <ScrollView
        android:id="@+id/fileScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/fileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>