<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/labelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xloc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/xloc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelX"
        android:layout_toRightOf="@id/labelX"
        android:text="@string/zeropos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelX"
        android:text="@string/yloc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/yloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelY"
        android:layout_below="@id/xloc"
        android:layout_toRightOf="@id/labelY"
        android:text="@string/zeropos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelY"
        android:text="@string/zloc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/zloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelZ"
        android:layout_below="@id/yloc"
        android:layout_toRightOf="@id/labelZ"
        android:text="@string/zeropos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelZ"
        android:text="@string/aloc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/aloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelA"
        android:layout_toRightOf="@id/labelA"
        android:text="@string/zeropos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelA"
        android:text="@string/status"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelStatus"
        android:layout_toRightOf="@id/labelStatus"
        android:text="@string/na"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelMomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelStatus"
        android:text="@string/momo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/momo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelMomo"
        android:layout_toRightOf="@id/labelMomo"
        android:text="@string/na"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelVelocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelMomo"
        android:text="@string/vel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelVelocity"
        android:layout_toRightOf="@id/labelVelocity"
        android:text="@string/na"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelVelocity"
        android:text="@string/line"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelLine"
        android:layout_toRightOf="@id/labelLine"
        android:text="@string/na"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/labelJogval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelLine"
        android:text="@string/jogval"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/jogval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/labelJogval"
        android:layout_toRightOf="@id/labelJogval"
        android:text="@string/zeropos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>