<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout 
    android:id="@+id/machinelist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelFV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fv"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/firmware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fb"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/firmware_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/system_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
        
        
    </LinearLayout>
</LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/save" />

</RelativeLayout>
